--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,23 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  http: ^1.1.0
+  hydrated_bloc: ^9.1.2
+  injectable: ^2.3.2
 
 dev_dependencies:
+  auto_route: ^7.8.4
+  auto_route_generator: ^7.3.2
+  build_runner: ^2.4.6
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  injectable_generator: ^2.4.1
 
 flutter:
   uses-material-design: true
