--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  envied: ^0.3.0+3
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -20,6 +21,7 @@ dev_dependencies:
   auto_route: ^7.8.4
   auto_route_generator: ^7.3.2
   build_runner: ^2.4.6
+  envied_generator: ^0.3.0+3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
