--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
+  getwidget: ^4.0.0
   http: ^1.1.0
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
