--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  auto_route: ^7.8.4
+  dartz: ^0.10.1
   envied: ^0.3.0+3
   equatable: ^2.0.5
   flutter:
@@ -14,10 +16,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   getwidget: ^4.0.0
+  google_fonts: ^6.1.0
   http: ^1.1.0
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
-  auto_route: ^7.8.4
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
