--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.1.0
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
@@ -29,6 +30,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.4.1
+  mockito: ^5.4.2
 
 flutter:
   uses-material-design: true
