--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_hooks: ^0.20.3
   get_it: ^7.6.4
   getwidget: ^4.0.0
   google_fonts: ^6.1.0
