--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+.env
 
 # IntelliJ related
 *.iml
@@ -50,3 +51,4 @@ app.*.map.json
 *.config.dart
 *.gr.dart
 *.mocks.dart
+*.g.dart
