--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: commentree
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   auto_route: ^7.8.4
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.1.0
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
+  path_provider: ^2.1.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
