--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: commentree
-description: A new Flutter project.
+description: All the comments in the world!.
 publish_to: "none"
 version: 0.1.0
 
@@ -15,7 +15,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_hooks: ^0.20.3
   get_it: ^7.6.4
   getwidget: ^4.0.0
   google_fonts: ^6.1.0
@@ -23,7 +22,7 @@ dependencies:
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
   path_provider: ^2.1.1
-  shared_preferences: ^2.2.2
+  
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
