--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_hooks: ^0.20.3
   get_it: ^7.6.4
   getwidget: ^4.0.0
   google_fonts: ^6.1.0
@@ -22,7 +23,6 @@ dependencies:
   hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
   path_provider: ^2.1.1
-  
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
