update project theme.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
         "**/*.g.dart": false
     },
     "explorerExclude.backup": {},
-    "workbench.colorTheme": "Night Owl"
+    "workbench.colorTheme": "One Dark Pro"
 }
